fix(ui): remove spacing above error message in Cells

--- a/ui/src/shared/components/EmptyGraphError.scss
+++ b/ui/src/shared/components/EmptyGraphError.scss
@@ -3,7 +3,6 @@
   height: 100%;
   border-radius: $cf-radius;
   background-color: $g0-obsidian;
-  position: relative;
   color: $c-dreamsicle;
   border: $cf-border solid $g2-kevlar;
 
